# pygments-gp

./: .gitignore  LICENCE.md  Makefile  README.md  pyproject.toml
src/pygments/lexer/: parigp.py
src/pygments_gp/: __about__.py  parigp.py
tests/: __init__.py  parigp_test.py
