[project]
name = "pygments-gp"
version = "0.0.1"
authors = [
  { name="Hong-Phuc Bui", email="noreply@htwsaar.de" },
]
description = "pygments PARI/GP"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pygments>=2.19",
    "pytest>=8.4.2",
    "tox>=4.32.0"
]

[project.urls]
Homepage = "https://github.com/hpb-htw/pygments-gp"
Issues = "https://github.com/hpb-htw/pygments-gp/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

